--- a/worksbynrfz/mrt-signage-rep-s1.html
+++ b/worksbynrfz/mrt-signage-rep-s1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MRT Signages Concept/Replications S1</title>
+  <title>MRT Signages Concept/Replications S2</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -34,40 +34,48 @@
 <body>
 
   <main id="main">
-
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
+          <div class="col-lg-12">
+            <div class="portfolio-description">
+              <h2>MRT Signages Concept/Replications S1</h2>
+              <p>
+                An attempt to replicate the new signage designs, as well as to update older signages to the new <a
+                  href="https://www.samuel-lim.com/signage-system">wayfinding system.</a>
+              </p>
+            </div>
+          </div>
 
           <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
+            <div class="portfolio-info">
+              <div class="portfolio-details-slider swiper">
+                <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/8kqMapx.png" alt="">
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/8kqMapx.png" alt="">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/3zmENiN.png" alt="">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/WhJMNTk.png" alt="">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/4zGJqNP.png" alt="">
+                  </div>
+  
+                  <div class="swiper-slide">
+                    <img src="https://i.imgur.com/3oy7Tcs.png" alt="">
+                  </div>
+
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/3zmENiN.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/WhJMNTk.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/4zGJqNP.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="https://i.imgur.com/3oy7Tcs.png" alt="">
-                </div>
-
-
+                <div class="swiper-pagination"></div>
               </div>
-              <div class="swiper-pagination"></div>
             </div>
           </div>
 
@@ -77,26 +85,17 @@
               <ul>
                 <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
                 <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
-                <!-- <li><strong><i class="fa-solid fa-link"&nbsp;&nbsp;></i>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
-            <div class="portfolio-description">
-              <h2>MRT Signages Concept/Replications S1</h2>
-              <p>
-                An attempt to replicate the new signage designs, as well as to update older signages to the new <a href="https://www.samuel-lim.com/signage-system">wayfinding system.</a>
-              </p>
-            </div>
           </div>
-
         </div>
-
-      </div>
     </section><!-- End Portfolio Details Section -->
 
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"
+      style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
