--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="fa-solid fa-house"></i><span>Home</span></a></li>
-        <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user" style="padding: 2px;"></i><span>About Me</span></a></li>
-        <li><a href="#skills" class="nav-link scrollto"><i class="fa-solid fa-chart-bar"></i><span>Skills</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a></li>
+        <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user"
+              style="padding: 2px;"></i><span>About Me</span></a></li>
+        <li><a href="#skills" class="nav-link scrollto"><i class="fa-solid fa-chart-bar"></i><span>Skills</span></a>
+        </li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a>
+        </li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
               NRFZ</span></a>
         </li>
@@ -295,45 +298,47 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Diploma in Information Technology</h4>
               <h5>2019-2022 | Tertiary Education (2)</h5>
+              <h4>Diploma in Information Technology</h4>
               <p><em>Singapore Polytechnic (SP)</em></p>
             </div>
             <div class="resume-item">
-              <h4>NITEC in Information Technlogy</h4>
               <h5>2017 - 2018 | Tertiary Education (1)</h5>
+              <h4>NITEC in Information Technlogy</h4>
               <p><em>Institute of Technical Education (ITE)</em></p>
             </div>
             <div class="resume-item">
-              <h4>N Levels</h4>
               <h5>2013 - 2016 | Secondary School</h5>
+              <h4>N Levels</h4>
               <p><em>Chua Chu Kang Secondary School</em></p>
             </div>
             <div class="resume-item">
-              <h4>PSLE</h4>
               <h5>2007 - 2012 | Primary School</h5>
+              <h4>PSLE</h4>
               <p><em>Unity Primary School</em></p>
             </div>
 
             <h3 class="resume-title">Experiences</h3>
             <div class="resume-item">
-              <h4>Supply Assistant (GE) - Administrative</h4>
-              <h5>Nov 2022 - Present</h5>
+              <h5>Sep 2023 - Present</h5><br>
+              <h4>Supply Assistant (GE) (2) - SBC CP ASA</h4>
+              <h5>Nov 2022 - Sep 2023</h5>
+              <h4>Supply Assistant (GE) (1) - SBC CP GE Store</h4>
               <p><em>Singapore Armed Forces</em></p>
             </div>
             <div class="resume-item">
-              <h4>Front-End Developer / UX Designer - Full-Time/Final-Year Project</h4>
               <h5>Oct 2021 - Feb 2022</h5>
+              <h4>Front-End Developer / UX Designer - Full-Time/Final-Year Project</h4>
               <p><em>HatchDev Asia</em></p>
             </div>
             <div class="resume-item">
-              <h4>Intern, Information Services Group</h4>
               <h5>Mar 2021 - Aug 2021</h5>
+              <h4>Intern, Information Services Group</h4>
               <p><em>Housing & Development Board</em></p>
             </div>
             <div class="resume-item">
-              <h4>Public Transport Surveyor - Part-Time</h4>
               <h5>Jan 2019 - Feb 2019</h5>
+              <h4>Public Transport Surveyor - Part-Time</h4>
               <p><em> TTS Group of Companies</em></p>
             </div>
           </div>
@@ -416,8 +421,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/igra3.html" class="portfolio-details-lightbox"
-                  data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/igra3.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -447,7 +452,8 @@
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/7xTbMaT.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="New Wayfinding System for BP12 Jelapang"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    title="New Wayfinding System for BP12 Jelapang"><i
+                      class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <a href="worksbynrfz/bp12.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
@@ -463,7 +469,8 @@
                 <p>Website Design</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/dQ1DiXn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Wayfinding? Right this way. - Improving PT Signages"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    title="Wayfinding? Right this way. - Improving PT Signages"><i
+                      class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
@@ -639,7 +646,8 @@
                 <p>App Mockups</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/MKX6hwn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Food Review Compiler/Flashify - a Flashcard App"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    title="Food Review Compiler/Flashify - a Flashcard App"><i
+                      class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <a href="worksbynrfz/food-rev-flash-app.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
@@ -700,7 +708,8 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"
+      style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
