--- a/index.html
+++ b/index.html
@@ -255,6 +255,14 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Sketchup <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6">
@@ -411,6 +419,22 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/hmARG3p.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>LTA Bus Stop Pole Design Refresh</h4>
+                <p>Concepts & Replications</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/hmARG3p.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="LTA Bus Stop Pole Design Refresh"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                  <a href="worksbynrfz/lta-bp.html"class="portfolio-details-lightbox" data-glightbox="type: external"
+                  title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-id">
             <div class="portfolio-wrap">
@@ -702,7 +726,7 @@
         &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: February 2024
+        Last Modified: March 2024
       </div>
     </div>
   </footer><!-- End Footer -->
