--- a/index.html
+++ b/index.html
@@ -257,8 +257,9 @@
                         <div class="ui-icon">
                             <i class="fa-solid fa-pen-ruler"></i>
                         </div>
-                        <h4>User Interface (UI) Design</h4>
+                        <h4>User Interface (UI)<br>Designs</h4>
                         <p>Involves designing attractive, practical and user-friendly interfaces.</p>
+                        <br>
                     </div>
                 </div>
 
@@ -270,14 +271,8 @@
                         <h4>User Experience (UX) Design Research</h4>
                         <p> Involves carefully studying the target users and each of their
                             needs.</p>
+                        <br>
                     </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                    <a href="./about.html" class="btn alime-btn btn-2 mt-15">About Me &nbsp;<i
-                            class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -293,8 +288,42 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h2>Follow Instagram</h2>
-                        <p>@worksbyNRFZ</p>
+                        <h2>Skills & Software Proficiency</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skill-ara">
+                <div class="skill">
+                    <div class="single-skill">
+                        <div class="progress-count">
+                            <p>User Interface Design</p><span>70%</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar wow slideInLeft" data-wow-duration="1s" data-wow-delay=".5s"
+                                aria-valuenow="25" role="progressbar" style="width: 70%" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="single-skill">
+                        <div class="progress-count">
+                            <p>User Experience</p><span>95%</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar wow slideInLeft" data-wow-duration="1s" data-wow-delay=".7s"
+                                role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="single-skill">
+                        <div class="progress-count">
+                            <p>Illustration</p><span>85%</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar wow slideInLeft" data-wow-duration="1s" data-wow-delay=".6s"
+                                role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -303,48 +332,51 @@
         <div class="instragram-feed-area owl-carousel">
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/11.jpg" alt>
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                <img src="img/gallery/brand1.png" alt>
+                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#">
                         <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                         <span>Alime_photographer</span>
                     </a>
-                </div>
+                </div> -->
             </div>
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/12.jpg" alt>
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                <img src="img/gallery/brand2.png" alt>
+                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#">
                         <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                         <span>Alime_photographer</span>
                     </a>
-                </div>
+                </div> -->
             </div>
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/13.jpg" alt>
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                <img src="img/gallery/brand3.png" alt>
+                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#">
                         <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                         <span>Alime_photographer</span>
                     </a>
-                </div>
+                </div> -->
             </div>
 
             <div class="single-instagram-item">
-                <img src="img/bg-img/14.jpg" alt>
-                <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
+                <img src="img/gallery/brand4.png" alt>
+                <!-- <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#">
                         <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                         <span>Alime_photographer</span>
                     </a>
-                </div>
+                </div> -->
             </div>
+        </div>
 
-
-
-
+        <div class="row">
+            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+                <a href="./about.html" class="btn alime-btn btn-2 mt-15">About Me &nbsp;<i
+                        class="fa-solid fa-arrow-right"></i></a>
+            </div>
         </div>
     </section>
 
@@ -362,11 +394,9 @@
                         </div>
 
                         <div class="social-info">
-                            <a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
                             <a href="#"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
                             <a href="#"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -374,13 +404,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner"
-        src="js/cookies-banner.js" 
-        data-position="bottom"
-        data-padding="17px 16px"
-        data-bg="#f2f3e5"
-        data-fg="#000"
-        data-font-family="Poppins, sans-serif"
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
+        data-padding="17px 16px" data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif"
         data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
