--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container container-nav">
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
