--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -34,7 +34,7 @@
 
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
-        <div class="container">
+        <div class="container container-nav">
 
           <nav class="classy-navbar justify-content-between" id="pwNav">
 
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-12">
-            <div>
+            <div class="main-title">
               <span>LTA's New Wayfinding System</span>
               <h1>Experimenting Improvements of Current Wayfinding</h1>
             </div>
@@ -126,9 +126,9 @@
 
             </div>
             <div class="single_catagory">
-              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download=""><i class="fa-solid fa-download"></i>&nbsp; Download the First
+              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download><i class="fa-solid fa-download"></i>&nbsp; Download the First
                 Edition</a>
-              <a class="btn wbnrfz_btn" href="#"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
+              <a class="btn wbnrfz_btn" href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
                 Drive</a>
             </div>
           </div>
@@ -146,7 +146,7 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="info">
-                    <p>A self-made handbook of how I explored different ways to
+                    <p>A self-made handbook of how I explored different ways and ideas to
                       make the current Wayfinding system better. <br>
 
                       Covered in this Handbook:<br>
