--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -111,14 +111,14 @@
               <div class="single_catagory">
                 <span>Share Project</span>
                 <div class="social_links">
-                  <a
-                    href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html" title="Facebook">
+                  <a href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html"
+                    title="Facebook">
                     <i class="fa-brands fa-facebook"></i> </a>
                   <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= EICW - Implementation Brainstorming"
                     title="X (Twitter)">
                     <i class="fa-brands fa-x-twitter"></i></a>
                   <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
-                      class="fa-solid fa-clipboard"></i>
+                      class="fa-solid fa-link"></i>
                     <p class="clipboard-copied" style="font-size: 12px;"></p>
                   </a>
                 </div>
@@ -126,9 +126,12 @@
 
             </div>
             <div class="single_catagory">
-              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download><i class="fa-solid fa-download"></i>&nbsp; Download the First
+              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf"
+                download><i class="fa-solid fa-download"></i>&nbsp; Download the First
                 Edition</a>
-              <a class="btn wbnrfz_btn" href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
+              <a class="btn wbnrfz_btn"
+                href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i
+                  class="fa-solid fa-external-link"></i>&nbsp; View in Google
                 Drive</a>
             </div>
           </div>
