--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-extension-1.css">
@@ -31,7 +31,7 @@
 
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container">
+                <div class="container container-xxl">
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
@@ -175,7 +175,7 @@
 
 
     <footer class="footer-area">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="footer-content d-flex align-items-center justify-content-between">
@@ -200,8 +200,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </div
 
     <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
         data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
