--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
-                <div class="container container-nav">
+                <div class="container container-xxl">
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
@@ -105,9 +105,6 @@
                             <a href="https://www.linkedin.com/in/nurafian-zulkifli/" target="_blank" class="media_link"
                                 title="LinkedIn">
                                 <div class="fa-brands fa-linkedin" style="font-size: 30px"></div>
-                            </a>
-                            <a href="mailto:nurafian.bz33@gmail.com" class="media_link" title="Email Me">
-                                <div class="fa-solid fa-envelope-open" style="font-size: 30px"></div>
                             </a>
                         </div>
                     </div>
@@ -224,8 +221,8 @@
     </div>
 
 
-    <section class="about-me-area bg-gray section-padding-80-0 clearfix">
-        <div class="container">
+    <section class="about-me-area bg-gray section-padding-50 clearfix">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms"
@@ -259,9 +256,8 @@
                         <div class="ui-icon">
                             <i class="fa-solid fa-pen-ruler"></i>
                         </div>
-                        <h4>User Interface (UI)<br>Designs</h4>
+                        <h4>User Interface (UI) Designs</h4>
                         <p>Involves designing attractive, practical and user-friendly interfaces.</p>
-                        <br>
                     </div>
                 </div>
 
@@ -273,7 +269,6 @@
                         <h4>User Experience (UX) Design Research</h4>
                         <p> Involves carefully studying the target users and each of their
                             needs.</p>
-                        <br>
                     </div>
                 </div>
             </div>
@@ -282,11 +277,11 @@
 
 
     <section class="follow-area clearfix">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center">
-                        <h2>Skills & Software Proficiency</h2>
+                        <h2 style="font-size: 30px">Skills & Software Proficiency</h2>
                     </div>
                 </div>
             </div>
@@ -363,7 +358,7 @@
     </section>
 
     <footer class="footer-area">
-        <div class="container">
+        <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
                     <div class="footer-content d-flex align-items-center justify-content-between">
@@ -388,8 +383,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </div
 
     <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
         data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
